Authorization in swagger dashboard
